# iRaceHUD

./: README.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
.github/workflows/: pr.yaml  publish.yaml
scripts/: fetch_track_info.ts  fetch_track_paths.ts
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/data/default_settings/: lap_times_overlay.json  lap_times_widget.json  main_overlay.json  main_widget.json  proximity_overlay.json  proximity_widget.json  relative_overlay.json  relative_widget.json  standings_overlay.json  standings_widget.json  subtimer_overlay.json  subtimer_widget.json  telemetry_overlay.json  telemetry_reference_overlay.json  telemetry_widget.json  timer_overlay.json  timer_widget.json  track_map_overlay.json  track_map_widget.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 01_init.sql  02_telemetry_reference_data_idx.sql  03_brake_points.sql
src-tauri/src/: db.rs  driver.rs  emitter.rs  lib.rs  main.rs  overlay_manager.rs  session.rs  settings.rs  telemetry.rs  telemetry_data.rs  telemetry_emitter.rs  util.rs  websocket.rs
src-tauri/src/emitter/: emittable_event.rs  overlay_manager_emitter.rs  settings_emitter.rs  telemetry_emitter.rs  ws_event.rs
src-tauri/src/session/: driver.rs  lap_time.rs  results_position.rs  session_data.rs  session_type.rs
src-tauri/src/settings/: overlays.rs  widgets.rs
src-tauri/src/settings/overlays/: common_settings.rs  lap_times.rs  main.rs  proximity.rs  relative.rs  standings.rs  subtimer.rs  telemetry.rs  telemetry_reference.rs  timer.rs  track_map.rs
src-tauri/src/settings/widgets/: lap_times.rs  main.rs  proximity.rs  relative.rs  standings.rs  subtimer.rs  telemetry.rs  timer.rs  track_map.rs
src-tauri/src/telemetry/: active.rs  current_time.rs  delta_best_time.rs  delta_last_time.rs  delta_optimal_time.rs  fastest_lap.rs  gap_next.rs  gap_prev.rs  gear.rs  gear_blink_rpm.rs  gear_shift_rpm.rs  incident_limit.rs  incidents.rs  lap.rs  lap_time.rs  laps_total.rs  player_car_class.rs  player_lap_times.rs  position.rs  positions_total.rs  proximity.rs  race_laps.rs  relative.rs  rpm.rs  session_state.rs  session_time.rs  session_time_total.rs  session_type.rs  speed.rs  standings.rs  strength_of_field.rs  telemetry_graph.rs  telemetry_reference.rs  track_id.rs  track_map.rs
src-tauri/src/util/: format_delta.rs  format_irating.rs  format_laptime.rs  get_gap.rs  get_relative_gap.rs  get_strength_of_field.rs  session_type.rs  settings_commands_helper.rs  settings_helper.rs  signed_duration.rs
src/components/: Flags.svelte  LapTimes.svelte  Main.svelte  ProgressBar.svelte  Proximity.svelte  Relative.svelte  Session.svelte  SessionToGo.svelte  Standings.svelte  SubTimer.svelte  Telemetry.svelte  Timer.svelte  TrackMap.svelte
src/components/overlays/: LapTimes.svelte  Main.svelte  Proximity.svelte  Relative.svelte  Standings.svelte  SubTimer.svelte  Telemetry.svelte  TelemetryReference.svelte  Timer.svelte  TrackMap.svelte  TrackMapCanvas.svelte
src/components/settings/: Application.svelte  Main.svelte  Widgets.svelte
src/components/track_info/: Menu.svelte  TrackInfo.svelte
src/components/utils/: Badge.svelte  ProgressBar.svelte
src/components/widgets/: LapTimes.svelte  Main.svelte  Proximity.svelte  Relative.svelte  Standings.svelte  SubTimer.svelte  Telemetry.svelte  Timer.svelte  TrackMap.svelte  TrackMapCanvas.svelte
src/lib/: utils.ts
src/lib/backend/: overlay_manager.svelte.ts  settings.svelte.ts  telemetry.svelte.ts  telemetry_reference.svelte.ts  ws_client.ts
src/lib/settings/: settings.svelte.ts
src/lib/stores/: TrackInfoState.svelte.ts  TrackSettingsState.svelte.ts  track_info.ts  track_settings.ts
src/lib/telemetry/: telemetry.svelte.ts  ws_client.ts
src/plugins/: tailwind-stripes.ts
src/routes/: +layout.svelte  +page.svelte
static/track_info/: track_info.json
static/track_info_data/: track_info.json  track_settings.json
static/track_paths/: track_paths.json
types/: env.d.ts
(+47 files in other folders)
