[package]
name = "iracehud"
version = "0.4.44"
description = "iRacing HUD overlay built in Tauri"
authors = ["Ivan Kachalkin<xikxp1@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
chrono = "0.4.41"
color-eyre = "0.6.4"
enum_dispatch = "0.3.13"
erased-serde = "0.4.6"
eyre = "0.6.12"
futures-util = "0.3.31"
humantime = "2.2.0"
log = "0.4.27"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simetry = { version = "0.2.3", features = [] }
specta = { version = "1.0.5", features = ["export"] }
strum = "0.27.1"
strum_macros = "0.27.1"
tauri = { version = "2.5.1", features = ["tray-icon"] }
tauri-plugin-log = "2.4.0"
tauri-plugin-store = "2.2.0"
tauri-plugin-prevent-default = { version = "2.1.0", features = ["unstable-windows"] }
tokio = { version = "1.45.0", features = ["full"] }
tokio-tungstenite = "0.26.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.3.0"
tauri-plugin-global-shortcut = "2.2.1"
tauri-plugin-single-instance = "2.2.4"
tauri-plugin-updater = "2.7.1"
